--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -9,7 +9,11 @@
     "ORDER_ONLINE_TITLE": "Ordena en Línea",
     "ORDER_ONLINE_DESCRIPTION": "Ordena en línea desde tu restaurante favorito con Fox Ordering",
     "BLOG_TITLE": "Blog",
-    "BLOG_DESCRIPTION": "Lee las últimas noticias y actualizaciones de Fox Ordering"
+    "BLOG_DESCRIPTION": "Lee las últimas noticias y actualizaciones de Fox Ordering",
+    "GOOGLE_THIRD_PARTY_TITLE": "Google 3rd Party Disclosure Statement",
+    "GOOGLE_THIRD_PARTY_DESCRIPTION": "Learn more about how Google uses data when you use Fox Ordering",
+    "FAQ_TITLE": "Preguntas Frecuentes",
+    "FAQ_DESCRIPTION": "Encuentra respuestas a las preguntas más frecuentes sobre Fox Ordering"
   },
   "HEADER": {
     "LOGO": "Volver a la página de inicio de lo Fox Ordering"
@@ -18,6 +22,7 @@
   "HEADER_ABOUT_US": "Sobre Nosotros",
   "HEADER_SUPPORT": "Soporte",
   "HEADER_ORDER_ONLINE": "Ordena en Línea",
+  "HEADER_BLOG": "Blog",
   "HEADER_BUTTON": "Obtener demo gratis",
   "HERO_TITLE": "¡Desata el Éxito de tu Restaurante!",
   "HERO_SUBTITLE": "<strong>Incrementa ventas, ordenes, y maximiza ganancias.</strong> Prueba nuestro sistema de pedidos en línea personalizado y experimenta el mejor servicio de pedidos en línea directo para tu restaurante <strong>#FoxExperience.</strong>",
@@ -309,6 +314,47 @@
   },
   "BLOG": {
     "HERO_TITLE": "Conoce nuestro <strong>Blog</strong>"
+  },
+  "GOOGLE_THIRD_PARTY_DISCLOSURE": {
+    "TITLE": "Work with third parties",
+    "SUBTITLE_1": "About Google Business Profile",
+    "SUBTITLE_2": "Using a third party",
+    "SUBTITLE_3": "How to work with a third party",
+    "SUBTITLE_4": "Deceptive behavior",
+    "SUBTITLE_5": "Report a violation of third-party policy",
+    "TEXT_1": " Google Business Profile makes it easy for customers to find and connect with your business when using Google Search and Maps. When you create and verify a Business Profile, you can manage how your business appears on Google to make a great first impression and keep your info up-to-date. As people find you on Google, you’ll gain insights on customer behavior and learn how they’re discovering and interacting with your business.",
+    "TEXT_2": "Business Profile gives you tools that can help your business succeed, but sometimes running a enough time to establish and maintain a successful Business Profile. If you need a helping hand or want some advice choose to work with a third party. There are many third parties to choose from, ranging from large companies that manage hundreds of customers to individual web consultants.",
+    "TEXT_3": "Although Business Profile is a tool that can be used at no charge, third parties often charge a fee to manage your profile. They can provide valuable services like keeping your profile up-to-date, providing you with customer insights, answering your questions, and responding to reviews. It’s important to understand the benefits that you may be get from a third party so that you can evaluate whether or not you’re getting the best return on your investment.",
+    "TEXT_4": "Here are five best practices for selecting and working with a third party:",
+    "TEXT_5": "<ol class='list-decimal pl-4 space-y-2'><li><strong>Be selective. </strong>Ask these questions when selecting a third party to work with:<ul class='list-disc pl-4'><li>Has it managed Business Profiles before?</li><li>Has it managed businesses with similar budgets or target audiences?</li><li>What other services can it provide to grow your business?</li></ul></li><li><strong>Work with one at a time.</strong> You may be tempted to divide your budget among multiple third parties to see which one drives the best results, but keep in mind that it’s best to test them one at a time. Your business can only appear once on Google, so it’s difficult to test multiple third parties at once.</li><li><strong>Educate yourself.</strong> It doesn’t take much time to get up to speed with how Business Profile works and understand how to use its features. Review the <a style='text-decoration-thickness: 1px' class='text-primary underline-offset-4 hover:underline' href='https://www.google.com/business/resources/'>resources and FAQs</a> for a basic introduction to Business Profile, then explore the <a style='text-decoration-thickness: 1px' class='text-primary underline-offset-4 hover:underline' href='https://support.google.com/business/#topic=4596754' target='_blank'>Help Center</a> to find answers to specific questions. Understanding how Business Profile works will help you make more informed decisions when working with a third party.</li><li><strong>Trust experience.</strong> Companies that have managed hundreds of businesses on Google are more likely to have expertise with Business Profile. Before you hire a third party, talk to its staff members to understand their previous experience managing businesses on Google.</li><li><strong>Evaluate your performance.</strong> You can find a wide range of insights in your Business Profile account that can give you info about how customers are finding and interacting with your business on Google. Spend time each month reviewing your profile's performance and evaluating the results you’re getting from working with a third party. Check for things like updated photos and current business hours, as well as changes in how customers are discovering your business online.</li></ol>",
+    "TEXT_6": "Many third parties represent the best interests of their clients, but some third parties are reputable Here’s a list of red flags to watch out for when selecting and working a third party:",
+    "TEXT_7": "<ul class='list-disc pl-4 space-y-2'><li><strong>Not being transparent.</strong> You have a right to know how users are interacting with your business, including specific data (like the number of views and clicks on your Business Profile).</li><li><strong>Guaranteeing</strong> placement on Google. It's not possible for third parties to influence the order in which your business appears on Google Search or Maps. <a style='text-decoration-thickness: 1px' class='text-primary underline-offset-4 hover:underline' href='https://support.google.com/business/answer/7091?sjid=9693406255884135070-NA' target='_blank'>Learn more about local search ranking.</a></li><li><strong>Claiming to work for Google.</strong> If a third party representative claims to be employed by Google, ask for their name and request that they email you from their @google.com (not @gmail.com) email address.</li><li><strong>Making threats.</strong> Third parties can’t remove your business from Google or access your profile without your explicit permission.</li><li><strong>Deceptive pricing.</strong> Malicious third parties may not charge you using the pricing you agreed to. Always get an official copy of your agreement before working with a third party.</li></ul>",
+    "TEXT_8": "Think a third-party partner is violating the <a style='text-decoration-thickness: 1px' class='text-primary underline-offset-4 hover:underline' href='https://support.google.com/business/answer/7353941?sjid=9693406255884135070-NA' target='_blank'>policy</a>? Let us know: <a style='text-decoration-thickness: 1px' class='text-primary underline-offset-4 hover:underline' href='https://support.google.com/business/contact/gmb_3p_complaints?sjid=9693406255884135070-NA' target='_blank'>Report a violation of third-party policy.</a>",
+    "TEXT_9": "While we may not respond personally when you contact us about a third party, we will investigate your comments and, if necessary, take appropriate action."
+  },
+  "FAQ": {
+    "TITLE": "<strong>Preguntas</strong><br>Frecuentes",
+    "QUESTION_1": "¿Cuál es la comisión de Fox Ordering?",
+    "ANSWER_1": "La comisión de Fox Ordering es del 5%.",
+    "QUESTION_2": "¿Tengo que pagar por mi tablet?",
+    "ANSWER_2": "No, la tablet es parte de nuestro servicio y no tiene costo para ti.",
+    "QUESTION_3": "¿Cuando recibiré mi tablet?",
+    "ANSWER_3": "3-7 días hábiles",
+    "QUESTION_4": "¿Quién se encarga de mis entregas?",
+    "ANSWER_4": "Nuestro socio de entrega es Doordash, ellos se encargarán de entregar los pedidos al cliente final.",
+    "QUESTION_5": "¿Con quién debo hablar si tengo un problema con un conductor?",
+    "ANSWER_5_1": "La información de soporte de Doordash se puede encontrar en la sección Ver pedido; luego en Opciones/Cancelar, es la cuarta pestaña desde arriba: Ayuda.",
+    "ANSWER_5_2": "Pasos a seguir:",
+    "ANSWER_5_3": "Llama al soporte de DoorDash al (855) 431-0459, explica tu caso y solicita un reembolso completo. IMPORTANTE: DoorDash debería enviarte un correo de confirmación al correo electrónico del restaurante.",
+    "ANSWER_5_4": "Reenvía el correo recibido a support@foxordering.com",
+    "ANSWER_5_5": "Llama a nuestro número de soporte (866) 883 6967 y explica el caso. Uno de nuestros agentes se pondrá en contacto contigo para gestionar el reembolso al cliente y confirmar el pago del pedido preparado.",
+    "ANSWER_5_6": "En ningún caso el restaurante debe reembolsar en efectivo. El cliente recibirá un reembolso en el mismo método de pago utilizado al realizar el pedido en línea, dentro de un plazo de hasta 5 días hábiles.",
+    "QUESTION_6": "¿Recibiré una impresora?",
+    "ANSWER_6": "No entregamos impresoras, sin embargo, la impresora que funciona con nuestra tablet y servicio se puede comprar en Amazon en el siguiente enlace <a style='text-decoration-thickness: 1px' class='text-primary underline-offset-4 hover:underline' href='https://www.amazon.com/gp/product/B01DVEOLFG/ref=ppx_yo_dt_b_asin_title_o03_s00?ie=UTF8&th=1'>Comprar impresora en Amazon</a>",
+    "QUESTION_7": "¿Con qué frecuencia recibo el pago?",
+    "ANSWER_7": "Los depósitos directos se envían semanalmente, todos los jueves. Los depósitos directos deberían estar disponibles entre 1 y 3 días hábiles.",
+    "QUESTION_8": "¿Fox Ordering funciona como un Marketplace?",
+    "ANSWER_8": "No operamos como un marketplace. Fox Ordering funciona como un sistema de pedidos en línea directo, que cubre tanto la recogida como la entrega. Operamos a través del sitio web oficial del restaurante, y en casos donde el restaurante no tiene un sitio web, ofrecemos crear uno sin costo. Este proceso simplificado se facilita mediante el perfil de Google My Business, que actúa como un aliado beneficioso para Fox Ordering."
   },
   "TEXT_ERROR_FIELD_REQUIRED": "Completa este campo",
   "TEXT_ERROR_FIELD_EMAIL": "Ingresa un correo electrónico válido",
