feat(FaqAccordion): update FAQ question 6 answer formatting and link

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -350,7 +350,9 @@
     "ANSWER_5_5": "Call our support number (866) 883 6967 and explain the case. One of our agents will contact you to manage the refund to your customer and confirm the payment of the prepared order.",
     "ANSWER_5_6": "In no case should the restaurant refund in cash. The customer will receive a refund to the same payment method used when ordering online, within up to 5 business days.",
     "QUESTION_6": "Do I get a printer sent to me?",
-    "ANSWER_6": "We don't deliver printers, however the printer that works with our tablet and service can be purchased on amazon at the following link <a style='text-decoration-thickness: 1px' class='text-primary underline-offset-4 hover:underline' href='https://www.amazon.com/gp/product/B01DVEOLFG/ref=ppx_yo_dt_b_asin_title_o03_s00?ie=UTF8&th=1'>Buy printer on Amazon</a>",
+    "ANSWER_6_1": "We don't deliver printers, however the printer that works with our tablet and service can be purchased on amazon at the following link ",
+    "ANSWER_6_2": "https://www.amazon.com/gp/product/B01DVEOLFG/ref=ppx_yo_dt_b_asin_title_o03_s00?ie=UTF8&th=1",
+    "ANSWER_6_3": "Buy printer on Amazon",
     "QUESTION_7": "How often do I get paid?",
     "ANSWER_7": "Direct deposits are sent out weekly, every Thursday. Direct deposits should be available between 1-3 business days.",
     "QUESTION_8": "Does Fox Ordering work as a Marketplace?",
