--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -350,7 +350,9 @@
     "ANSWER_5_5": "Llama a nuestro número de soporte (866) 883 6967 y explica el caso. Uno de nuestros agentes se pondrá en contacto contigo para gestionar el reembolso al cliente y confirmar el pago del pedido preparado.",
     "ANSWER_5_6": "En ningún caso el restaurante debe reembolsar en efectivo. El cliente recibirá un reembolso en el mismo método de pago utilizado al realizar el pedido en línea, dentro de un plazo de hasta 5 días hábiles.",
     "QUESTION_6": "¿Recibiré una impresora?",
-    "ANSWER_6": "No entregamos impresoras, sin embargo, la impresora que funciona con nuestra tablet y servicio se puede comprar en Amazon en el siguiente enlace <a style='text-decoration-thickness: 1px' class='text-primary underline-offset-4 hover:underline' href='https://www.amazon.com/gp/product/B01DVEOLFG/ref=ppx_yo_dt_b_asin_title_o03_s00?ie=UTF8&th=1'>Comprar impresora en Amazon</a>",
+    "ANSWER_6_1": "No entregamos impresoras, sin embargo, la impresora que funciona con nuestra tablet y servicio se puede comprar en Amazon en el siguiente enlace ",
+    "ANSWER_6_2": "https://www.amazon.com/gp/product/B01DVEOLFG/ref=ppx_yo_dt_b_asin_title_o03_s00?ie=UTF8&th=1",
+    "ANSWER_6_3": "Comprar impresora en Amazon",
     "QUESTION_7": "¿Con qué frecuencia recibo el pago?",
     "ANSWER_7": "Los depósitos directos se envían semanalmente, todos los jueves. Los depósitos directos deberían estar disponibles entre 1 y 3 días hábiles.",
     "QUESTION_8": "¿Fox Ordering funciona como un Marketplace?",
